styling to menu bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="nav"><button><i class="fa fa-bars" aria-hidden="true"></i></button></div>
 
-        <div id="logo">
+        <div class="fx" id="logo">
             <figure> <img src="logoBig.png">
                 <figcaption>We Provide The Best Food<br>At The <strong>Right place</strong></figcaption>
             </figure>
@@ -25,17 +25,33 @@
 
 
 
-
     </div>
+
     <div>
-        <div class="Button">
-            <button>Happy Hour</button>
-            <button>Breakfast</button>
-            <button>Lunch</button>
-            <button>Dinner</button>
-            <button>Party Time</button>
+        <div class="fx mmbar">
+            <div class="wd">
+                <div class="fx time">
+                    <p>Happy Hour</p>
+                </div>
+                <div class="fx time cl">
+                    <p>Party Time</p>
+                </div>
+            </div>
+
+            <div class="fx wd bkg breakfast">
+                <p>Breakfast</p>
+            </div>
+            <div class="fx wd bkg lunch">
+                <p>Lunch</p>
+            </div>
+            <div class="fx wd bkg dinner">
+                <p>Dinner</p>
+            </div>
+
+
         </div>
 
+    </div>
 
 
 
