--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
 
         </div>
 
-
-
-
     </div>
 
     <div>
@@ -52,6 +49,23 @@
         </div>
 
     </div>
+    <div>
+        <div>
+            <div class="fx fds ">
+                <div class="fx fstfd">
+                    <img src="fastFood1.jpg">
+                    <img src="fastFood2.jpg">
+                </div>
+
+                <div>
+                    <p><b>Fast Food</b><br><strong>you will love our delicious food</strong>
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto libero, soluta recusandae corporis debitis harum optio.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
