fast food description and drins image and description

--- a/index.html
+++ b/index.html
@@ -57,16 +57,34 @@
                     <img src="fastFood2.jpg">
                 </div>
 
-                <div>
-                    <p><b>Fast Food</b><br><strong>you will love our delicious food</strong>
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto libero, soluta recusandae corporis debitis harum optio.</p>
+                <div class="descff">
+                    <h3>Fast Food</h3>
+                    <p><strong>you will love our delicious food</strong> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto
+                        libero, soluta recusandae corporis debitis harum optio.orem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
+                    <a class="view" href="#">VIEW GALLERY</a>
                 </div>
             </div>
         </div>
     </div>
 
+    <div>
+        <div>
+            <div class="fx fds ">
+                <div class="descff">
+                    <p><b>Drinks</b><br><strong> we also produce delicious drinks</strong>
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto libero, soluta recusandae corporis debitis harum optio.orem
+                        ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
+                </div>
+                <div class="fx drnk">
+                    <img src="drink1.jpg">
+                    <img src="drink2.jpg">
+                </div>
 
+
+            </div>
+        </div>
+    </div>
 
 
 </body>
