addition of images to lower food menu and styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h3>Fast Food</h3>
                     <p><strong>you will love our delicious food</strong> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto
                         libero, soluta recusandae corporis debitis harum optio.orem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
-                    <a class="view" href="#">VIEW GALLERY</a>
+                    <a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -71,10 +71,13 @@
         <div>
             <div class="fx fds ">
                 <div class="descff">
-                    <p><b>Drinks</b><br><strong> we also produce delicious drinks</strong>
+                    <h3>Drinks</h3>
+                    <p><strong> we also produce delicious drinks</strong>
                     </p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto libero, soluta recusandae corporis debitis harum optio.orem
                         ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
+
+                    <a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
                 <div class="fx drnk">
                     <img src="drink1.jpg">
@@ -84,6 +87,36 @@
 
             </div>
         </div>
+    </div>
+    <div class="fx lowernt">
+        <div class="fx lrfoo">
+            <div>
+                <ul class="fx frloo">
+                    <li>fastfood</li>
+                    <li>drinks</li>
+                    <li>chicken</li>
+                    <li>Rice</li>
+                </ul>
+            </div>
+            <div class="fx innermen">
+                <figure class="lorfd">
+                    <img src="./fastfood/chickenBurger.jpg">
+                    <figcaption>Chicken Burger</figcaption>
+                </figure>
+                <figure class="lorfd">
+                    <img src="./fastfood/beefBurger.jpg">
+                    <figcaption>Beef burger</figcaption>
+                </figure>
+                <figure class="lorfd">
+                    <img src="./fastfood/chickenPizza.jpg">
+                    <figcaption>Chicken pizza</figcaption>
+                </figure>
+            </div>
+
+
+        </div>
+
+
     </div>
 
 
