addition of angle brackets to lower menu

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 </ul>
             </div>
             <div class="fx innermen">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
                 <figure class="lorfd">
                     <img src="./fastfood/chickenBurger.jpg">
                     <figcaption>Chicken Burger</figcaption>
@@ -111,6 +112,7 @@
                     <img src="./fastfood/chickenPizza.jpg">
                     <figcaption>Chicken pizza</figcaption>
                 </figure>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
 
 
