--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
         <div class="fx lrfoo">
             <div>
                 <ul class="fx frloo">
-                    <li>fastfood</li>
-                    <li>drinks</li>
-                    <li>chicken</li>
-                    <li>Rice</li>
+                    <li>fAST FOOD</li>
+                    <li>DRINKS</li>
+                    <li>CHICKEN</li>
+                    <li>RICE</li>
                 </ul>
             </div>
             <div class="fx innermen">
                 <i class="fa fa-angle-left" aria-hidden="true"></i>
                 <figure class="lorfd">
                     <img src="./fastfood/chickenBurger.jpg">
-                    <figcaption>Chicken Burger</figcaption>
+                    <figcaption>CHICKEN BURGER</figcaption>
                 </figure>
                 <figure class="lorfd">
                     <img src="./fastfood/beefBurger.jpg">
-                    <figcaption>Beef burger</figcaption>
+                    <figcaption>BEEF BURGER</figcaption>
                 </figure>
                 <figure class="lorfd">
                     <img src="./fastfood/chickenPizza.jpg">
-                    <figcaption>Chicken pizza</figcaption>
+                    <figcaption>CHICKEN PIZZA</figcaption>
                 </figure>
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
@@ -120,6 +120,7 @@
 
 
     </div>
+
 
 
 </body>
