--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
 
     </div>
 
+    <div class="fx">
+        <div>
+            <h4>Our Happy Customers</h4>
+            <p><strong> George Richard</strong></p>
+            <p> Great Food! Menu is awesome , there food are not only great but also in the right place i will highly recommend them :)
+            </p>
+            <div class="fx">
+                <figure>
+                    <img src="./customers/p1.png">
+                </figure>
+                <figure>
+                    <img src="./customers/p2.png">
+                </figure>
+                <figure>
+                    <img src="./customers/p3.png">
+                </figure>
+            </div>
+        </div>
+        <div>
+            <h4>About Menu</h4>
+            <p>
+                We are menu alittle team of 7 members. <br> ut wisi enimad minim veniam,quis nos trudexer ci tation uliamcorter susbict tob ortis nisil ut uliquib ex ea commodpo conse quiat duisau tem vel eum iniure doolar in
+            </p>
+        </div>
+    </div>
 
 
 </body>
