updates on customers menu border

--- a/index.html
+++ b/index.html
@@ -121,13 +121,14 @@
 
     </div>
 
-    <div class="fx">
-        <div>
+    <div class="fx Customer_menu">
+        <div class="customers">
             <h4>Our Happy Customers</h4>
             <p><strong> George Richard</strong></p>
             <p> Great Food! Menu is awesome , there food are not only great but also in the right place i will highly recommend them :)
             </p>
-            <div class="fx">
+            <div class="fx ">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
                 <figure>
                     <img src="./customers/p1.png">
                 </figure>
@@ -137,6 +138,7 @@
                 <figure>
                     <img src="./customers/p3.png">
                 </figure>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
         </div>
         <div>
