updates on customers menu border

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
         </div>
-        <div>
+        <div class="customers about">
             <h4>About Menu</h4>
             <p>
                 We are menu alittle team of 7 members. <br> ut wisi enimad minim veniam,quis nos trudexer ci tation uliamcorter susbict tob ortis nisil ut uliquib ex ea commodpo conse quiat duisau tem vel eum iniure doolar in
