updates on footer

--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
             </p>
         </div>
     </div>
+    <div>
+        <div>
+            <h3>
+                Get our daily food items delivered to your email
+            </h3>
+
+        </div>
+        <div>
+            <img src="./footerlogos/logo_white.png">
+            <p>That's What We Are</p>
+            <img src="./footerlogos/facebook.png">
+            <img src="./footerlogos/twitter.png">
+            <img src="./footerlogos/pinterest.png">
+        </div>
+    </div>
 
 
 </body>
