--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </div>
     <div>
-        <div>
+        <div class="footerhead">
             <h3>
                 Get our daily food items delivered to your email
             </h3>
