updates on footerconclusion

--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
             </h3>
 
         </div>
-        <div>
+        <div class="footercocl">
             <img src="./footerlogos/logo_white.png">
             <p>That's What We Are</p>
             <img src="./footerlogos/facebook.png">
             <img src="./footerlogos/twitter.png">
             <img src="./footerlogos/pinterest.png">
+            <p>2016 Menu restaurant</p>
         </div>
     </div>
 
