updates on customers border

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         </div>
         <div class="footercocl">
             <img src="./footerlogos/logo_white.png">
+            <h3>MENU</h3>
             <p>That's What We Are</p>
             <img src="./footerlogos/facebook.png">
             <img src="./footerlogos/twitter.png">
