updates on subscribtion page

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
             <h3>
                 Get our daily food items delivered to your email
             </h3>
+            <form action=""></form>
+            <input type="text" placeholder="Your Email">
+            <button type="submit" value="Subscribe">Subscribe</button>
 
         </div>
         <div class="footercocl">
