updates on subscribtion page

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </h3>
             <form action=""></form>
             <input type="text" placeholder="Your Email">
-            <button type="submit" value="Subscribe">Subscribe</button>
+            <button type="submit" class="button" value="Subscribe">Subscribe</button>
 
         </div>
         <div class="footercocl">
