updates on subscribtion page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 Get our daily food items delivered to your email
             </h3>
             <form action=""></form>
-            <input type="text" placeholder="Your Email">
+            <input type="text" class="subscribe" placeholder="Your Email">
             <button type="submit" class="button" value="Subscribe">Subscribe</button>
 
         </div>
