updates on footer page

--- a/index.html
+++ b/index.html
@@ -162,9 +162,11 @@
             <img src="./footerlogos/logo_white.png">
             <h3>MENU</h3>
             <p>That's What We Are</p>
-            <img src="./footerlogos/facebook.png">
-            <img src="./footerlogos/twitter.png">
-            <img src="./footerlogos/pinterest.png">
+            <div class="footerimage">
+                <img src="./footerlogos/facebook.png">
+                <img src="./footerlogos/twitter.png">
+                <img src="./footerlogos/pinterest.png">
+            </div>
             <p>2016 Menu restaurant</p>
         </div>
     </div>
