updates on drinks and fast food section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <div class="descff">
                     <h3>Fast Food</h3>
                     <p><strong>you will love our delicious food</strong> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto
-                        libero, soluta recusandae corporis debitis harum optio.orem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
-                    <a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        libero, soluta recusandae corporis debitis harum optio.orem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p> <br>
+                    <br><a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -76,8 +76,9 @@
                     </p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tempora obcaecati minus architecto libero, soluta recusandae corporis debitis harum optio.orem
                         ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate voluptatibus ut odio est consectetur omnis, dolores alias. Numquam tem</p>
+                    <br>
 
-                    <a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    <br><a class="view" href="#">VIEW GALLERY<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
                 <div class="fx drnk">
                     <img src="drink1.jpg">
