add modification of footer page

--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
 
         </div>
         <div class="footercocl">
-            <img src="./footerlogos/logo_white.png">
-            <h3>MENU</h3>
-
+            <div class=" fx Menufooter">
+                <img src="./footerlogos/logo_white.png"><br>
+                <br>
+                <h3>MENU</h3>
+            </div>
             <p>That's What We Are</p>
             <div class="footerimage">
                 <img src="./footerlogos/facebook.png">
