few changes on the page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p><strong> George Richard</strong></p>
             <p> Great Food! Menu is awesome , there food are not only great but also in the right place i will highly recommend them :)
             </p>
-            <div class="fx  ">
+            <div class="fx customerspic ">
                 <i class="fa fa-angle-left" aria-hidden="true"></i>
                 <figure>
                     <img src="./customers/p1.png">
