few changes on the page

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                 <br>
                 <h3>MENU</h3>
             </div>
-            <p>That's What We Are</p>
+            <p>That's What We Are</p> <br>
+            <br>
             <div class="footerimage">
                 <img src="./footerlogos/facebook.png">
                 <img src="./footerlogos/twitter.png">
